--- a/templates/start.html
+++ b/templates/start.html
@@ -21,7 +21,7 @@
                     <div class="text-center cursor-pointer border-4 rounded-xl transition
                                 {% if loop.first %} border-blue-500 bg-blue-50 {% endif %} hover:border-blue-300 " 
                          onclick="selectImage(this, '{{ name }}')">
-                        <img src="{{ image | urlencode }}" alt="{{ name }}" class="rounded-lg mb-2">
+                        <img src="{{ url_for('static', filename=image) }}" alt="{{ name }}" class="rounded-lg mb-2">
                         <p class="text-gray-600 font-medium">{{ name }}</p>
                     </div>
                 {% endfor %}
