--- a/templates/start.html
+++ b/templates/start.html
@@ -12,7 +12,7 @@
     <div class="flex-grow p-4">
         <div class="w-full h-full bg-white rounded-xl shadow-lg p-8">
             <h1 class="text-6xl font-semibold text-gray-700 mb-10 text-center">PLACEHOLDER TITLE</h1>
-            <form action="/submit" method="POST" id="option-form">
+            <form action="{{ url_for ('showtime') }}" method="POST" id="option-form">
                 <div class="flex items-center justify-center gap-4">
                     <h2 class="text-3xl font-semibold text-gray-700 mb-10 text-center">Choose your presenter!</h2>
                 </div>
